--- a/eshop-mybatis/src/main/resources/messages_en_US.properties
+++ b/eshop-mybatis/src/main/resources/messages_en_US.properties
@@ -26,3 +26,4 @@ must=must input
 signup_title=signup
 signup_failure=signup failure,please retry.
 faq_title=faq
+existUsernameError=The username is existed.
