--- a/eshop-mybatis/src/main/resources/messages_zh_CN.properties
+++ b/eshop-mybatis/src/main/resources/messages_zh_CN.properties
@@ -26,3 +26,4 @@ signup_failure=\u6CE8\u518C\u5931\u8D25,\u8BF7\u91CD\u65B0\u8F93\u5165
 
 signup_title=\u6CE8\u518C\u8D26\u53F7
 faq_title=\u5E38\u89C1\u95EE\u9898
+existUsernameError=\u5DF2\u6709\u8BE5\u7528 \u6237\u540D\uFF0C\u8BF7\u6539\u7528\u517e
